--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     { "path": "packages/query-broadcast-client-experimental" },
     { "path": "packages/query-sync-storage-persister" },
     { "path": "packages/react-query" },
+    { "path": "packages/solid-query" },
     { "path": "packages/react-query-devtools" },
     { "path": "packages/react-query-persist-client" }
   ]
