--- a/packages/solid-query/.eslintrc
+++ b/packages/solid-query/.eslintrc
@@ -2,5 +2,8 @@
   "parserOptions": {
     "project": "./tsconfig.json",
     "sourceType": "module"
+  },
+  "rules": {
+    "react/react-in-jsx-scope": "off"
   }
 }
