--- a/packages/solid-query/package.json
+++ b/packages/solid-query/package.json
@@ -32,15 +32,13 @@
   ],
   "devDependencies": {
     "@types/jscodeshift": "^0.11.3",
-    "jscodeshift": "^0.13.1",
-    "solid-jest": "^0.2.0",
-    "solid-testing-library": "^0.3.0"
+    "jscodeshift": "^0.13.1"
   },
   "dependencies": {
     "@tanstack/query-core": "4.2.3"
   },
   "peerDependencies": {
-    "solid-js": "^1.5.1"
+    "solid-js": "^1.5.4"
   },
   "peerDependenciesMeta": {}
 }
